tests/agl/rejections/scope/input_not_root.agl
if true =>
  input late
| else =>
  pass
